k8s/namespace.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 BuildWorks.AI
apiVersion: v1
kind: Namespace
metadata:
  name: eucora
  labels:
    name: eucora
    environment: production
